force-app/main/default/objects/Donate__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>CrowdFunding__c</fullName>
        <label>Crowd Funding</label>
        <referenceTo>CrowdFunding__c</referenceTo>
        <relationshipLabel>Donates</relationshipLabel>
        <relationshipName>Donates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DonateId__c</fullName>
        <externalId>true</externalId>
        <label>Donate Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Participant__c</fullName>
        <label>Participant</label>
        <referenceTo>Participant__c</referenceTo>
        <relationshipName>Funds</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Donate</label>
    <nameField>
        <displayFormat>D-{0000}</displayFormat>
        <label>Donate Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Donates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>